correction on descriptive analysis of deceased patients

--- a/preprocessing/LOS-real-dataset-preparation.ipynb
+++ b/preprocessing/LOS-real-dataset-preparation.ipynb
@@ -35,29 +35,16 @@
    "outputs": [],
    "source": [
     "# Primary Admissions information\n",
-    "#df = pd.read_csv(r\"MIMIC-IV/admissions.csv\")\n",
+    "df = pd.read_csv(r\"MIMIC-IV/admissions.csv\")\n",
     "\n",
     "# Patient specific info such as gender\n",
-    "#df_pat = pd.read_csv(r\"MIMIC-IV/patients.csv\")\n",
+    "df_pat = pd.read_csv(r\"MIMIC-IV/patients.csv\")\n",
     "\n",
     "# Diagnosis for each admission to hospital\n",
-    "#df_diagcode = pd.read_csv(r\"MIMIC-IV/diagnoses_icd.csv\")\n",
+    "df_diagcode = pd.read_csv(r\"MIMIC-IV/diagnoses_icd.csv\")\n",
     "\n",
     "# Intensive Care Unit (ICU) for each admission to hospital\n",
-    "#df_icu = pd.read_csv(r\"MIMIC-IV/icustays.csv\")\n",
-    "\n",
-    "\n",
-    "# Primary Admissions information\n",
-    "df = pd.read_csv(\"../MIMIC-IV/admissions.csv\")\n",
-    "\n",
-    "# Patient specific info such as gender\n",
-    "df_pat = pd.read_csv(\"../MIMIC-IV/patients.csv\")\n",
-    "\n",
-    "# Diagnosis for each admission to hospital\n",
-    "df_diagcode = pd.read_csv(\"../MIMIC-IV/diagnoses_icd.csv\")\n",
-    "\n",
-    "# Intensive Care Unit (ICU) for each admission to hospital\n",
-    "df_icu = pd.read_csv(\"../MIMIC-IV/icustays.csv\")"
+    "df_icu = pd.read_csv(r\"MIMIC-IV/icustays.csv\")\n"
    ]
   },
   {
@@ -1382,8 +1369,8 @@
     "# Note: Train dataset will be used for generating synthetic data using CT-GAN.\n",
     "# Test dataset will be used for evaluation of models\n",
     "\n",
-    "los_use.to_csv(\"../MIMIC-IV/los_usecase.csv\", index = False)\n",
-    "los_predict.to_csv(\"../MIMIC-IV/los_predict.csv\", index = False)"
+    "los_use.to_csv(\"MIMIC-IV/los_usecase.csv\", index = False)\n",
+    "los_predict.to_csv(\"MIMIC-IV/los_predict.csv\", index = False)"
    ]
   }
  ],
